--- a/src/assets/scss/components/MobileNav.scss
+++ b/src/assets/scss/components/MobileNav.scss
@@ -53,6 +53,7 @@
   text-transform: uppercase;
   background: $black;
   bottom: 0;
+  padding-right: 100px;
   z-index: 59;
   width: 110%;
   margin-left: -10px;
