--- a/src/assets/scss/screens/Home.scss
+++ b/src/assets/scss/screens/Home.scss
@@ -1,5 +1,4 @@
 .big-bar {
-  // display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,23 +7,23 @@
   background: $blue;
   transform-origin: 0%;
   z-index: 4;
-  // @include mobile {
-  //   display: block;
-  // }
+
 }
 
 .home {
   height: 100vh;
+  overflow-x: hidden;
+  
   .home-background {
     z-index: -1;
     display: flex;
     height: 100vh;
-    max-width: 100vw!important;
+    width: 100%;
     position: absolute;
     overflow: hidden;
 
     .home-bg {
-      position: relative;
+      z-index: -1;
       filter: brightness(60%);
       height: 100vh;
       width: 100vw;
